--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "olucasventura",
+  "name": "nodebr",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.3.1",
+    "react-icons": "^4.9.0",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
