--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^16.18.34",
     "@types/react": "^18.2.7",
     "@types/react-dom": "^18.2.4",
+    "animate.css": "^4.1.1",
     "antd": "^5.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
